dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT([osmtest.c])

#AC_INIT(opensm, 0.9.0, openib-general@openib.org)
#AC_CONFIG_SRCDIR([osm_sa_service_record_ctrl.c])
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(osmtest, 0.9.0)

dnl Checks for programs
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL

dnl Checks for libraries
#AC_CHECK_LIB(osmcomp, cl_thread_pool_init, [],
#	AC_MSG_ERROR([cl_thread_pool_init() not found.  opensm requires libosmcomp.]))
#AC_CHECK_LIB(osmvendor, osm_vendor_init, [],
#	AC_MSG_ERROR([osm_vendor_init() not found.  opensm requires libosmvendor.]))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h sys/time.h unistd.h])

dnl Checks for library functions
#AC_FUNC_MALLOC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([gettimeofday localtime_r strcspn strtol strtoull])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_C_VOLATILE

AC_CACHE_CHECK(whether ld accepts --version-script, ac_cv_version_script,
    if test -n "`$LD --help < /dev/null 2>/dev/null | grep version-script`"; then
        ac_cv_version_script=yes
    else
        ac_cv_version_script=no
    fi)

AM_CONDITIONAL(HAVE_LD_VERSION_SCRIPT, test "$ac_cv_version_script" = "yes")

dnl support debug mode
AC_ARG_ENABLE(debug,
[  --enable-debug Turn on debug mode],
[case "${enableval}" in
  yes) debug=true ;;
  no)  debug=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[debug=false])
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)


dnl Provide user option to select vendor
OPENIB_APP_OSMV_SEL

# we have to revive the env CFALGS as some how they are being overwritten...
# see http://sources.redhat.com/automake/automake.html#Flag-Variables-Ordering
# for why they should NEVER be modified by the configure to allow for user
# overrides.
CFLAGS=$ac_env_CFLAGS_value

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
